sfSandBoxCode/force-app/main/default/objects/Pit_Conversion_Item__c/Pit_Conversion_Item__c.object-meta.xml
<CustomObject>
    <label>Pit Conversion Item</label>
    <nameField>
        <displayFormat>PCI-{0000000000}</displayFormat>
        <label>Pit Conversion Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pit Conversion Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>