sfSandBoxCode/force-app/main/default/objects/Pit_Conversion_Item__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <formula>IF(CASE(Item_Group__c,
&quot;Pit Conversion Package&quot;, IF(Opportunity__r.Pit_Conversion_Items_Approved__c, 1, 0),
0) == 1, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>