sfSandBoxCode/force-app/main/default/objects/Pit_Conversion_Item__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <formula>Opportunity_Item__r.InventoryItem__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Item</label>
    <type>Text</type>
</CustomField>