sfSandBoxCode/force-app/main/default/objects/Pit_Conversion_Item__c/fields/Inventory_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item_Name__c</fullName>
    <formula>Opportunity_Item__r.InventoryItem__r.Item_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Item Name</label>
    <type>Text</type>
</CustomField>