sfSandBoxCode/force-app/main/default/objects/Pit_Conversion_Item__c/fields/Item_Division__c.field-meta.xml
<CustomField>
    <fullName>Item_Division__c</fullName>
    <formula>Opportunity_Item__r.InventoryItem__r.Item_Company__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Division</label>
    <type>Text</type>
</CustomField>