sfSandBoxCode/force-app/main/default/objects/Pit_Conversion_Item__c/fields/Item_Group__c.field-meta.xml
<CustomField>
    <fullName>Item_Group__c</fullName>
    <formula>TEXT(Opportunity_Item__r.Grouping__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Group</label>
    <type>Text</type>
</CustomField>