sfSandBoxCode/force-app/main/default/objects/Pit_Conversion_Item__c/fields/Opportunity_Item__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Item</label>
    <referenceTo>Opportunity_Item__c</referenceTo>
    <relationshipLabel>Pit Conversion Items</relationshipLabel>
    <relationshipName>Pit_Conversion_Items</relationshipName>
    <type>Lookup</type>
</CustomField>